--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <h4>Lets learn about it and conquer it !</h4>
         </div>
         <div class="hero_image">
-          <img src="images/depression.jpg" alt="hero" />
+          <img src="depression.jpg" alt="hero" />
         </div>
       </section>
       <div class="h-card">
@@ -54,7 +54,7 @@
             <a href="post.html"><button class="read-btn">Read More</button></a>
           </div>
         </div>
-        <img src="images/depression girl.jpg" alt="depressed girl" />
+        <img src="depression girl.jpg" alt="depressed girl" />
       </div>
 
       <div class="card_container">
